--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,20 @@
   height: 80px;
 }
 
+h2{
+  /*color:#f4a203;*/
+  
+}
+
 .App-header {
-  background-color: #222;
+  background: rgba(25, 25, 25, .7);
+/*  background-image: url("stardust.png");*/
   height: 130px;
   padding: 20px;
   color: white;
+  margin-bottom:15px;
+  border-bottom:6px solid #f4a203;
+
 }
 
 .App-intro {
