--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,12 @@ button:focus {outline:0;}
   height:420px;
 }
 
+@media screen and (max-width: 680px) {
+	.imageContainer{
+	height:270px;
+	}
+}
+
 #theCat{
   height:100%;
 -moz-box-shadow: 8px 8px 8px 0px #343434;
